--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "scss-loader": "^0.0.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vue-style-loader": "^3.0.3"
+    "vue-style-loader": "^3.0.3",
+    "better-scroll": "^0.1.7"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
