--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "better-scroll": "^0.1.7",
     "css-loader": "^0.28.9",
     "element-ui": "^2.0.11",
     "mint-ui": "^2.2.13",
@@ -22,8 +23,7 @@
     "scss-loader": "^0.0.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vue-style-loader": "^3.0.3",
-    "better-scroll": "^0.1.7"
+    "vue-style-loader": "^3.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
